{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 226,
  "lineage": "f08462ba-82e6-a10e-2c88-1c5a6812c841",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/frontendIPConfigurations/web-lb-public-ip",
                "name": "web-lb-public-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/publicIPAddresses/sap-dev-lb-publicip"
              }
            ],
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb",
            "location": "eastus2",
            "name": "sap-dev-web-lb",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.myrg1",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/backendAddressPools/web-backend",
            "loadbalancer_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb",
            "name": "web-backend"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.myrg1",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.myrg1",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/backendAddressPools/web-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/frontendIPConfigurations/web-lb-public-ip",
            "frontend_ip_configuration_name": "web-lb-public-ip",
            "frontend_port": 80,
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/loadBalancingRules/web-app-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb",
            "name": "web-app-rule",
            "probe_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.myrg1",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkInterfaces/sap-dev-web-linuxvm-nic-vm1",
            "internal_domain_name_suffix": "emmgly2xinjunjwbbr2ynvkkmh.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxip-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet"
              }
            ],
            "location": "eastus2",
            "name": "sap-dev-web-linuxvm-nic-vm1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "sap-dev-rg-default-knfsio"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkInterfaces/sap-dev-web-linuxvm-nic-vm2",
            "internal_domain_name_suffix": "emmgly2xinjunjwbbr2ynvkkmh.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxip-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet"
              }
            ],
            "location": "eastus2",
            "name": "sap-dev-web-linuxvm-nic-vm2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "sap-dev-rg-default-knfsio"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkInterfaces/sap-dev-web-linuxvm-nic-vm1/ipConfigurations/web-linuxip-1|/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linuxip-1",
            "network_interface_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkInterfaces/sap-dev-web-linuxvm-nic-vm1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linux_nic",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkInterfaces/sap-dev-web-linuxvm-nic-vm2/ipConfigurations/web-linuxip-1|/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/loadBalancers/sap-dev-web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linuxip-1",
            "network_interface_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkInterfaces/sap-dev-web-linuxvm-nic-vm2"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linux_nic",
            "azurerm_public_ip.web_lb_publicip",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-bastionsubnet-sg",
            "location": "eastus2",
            "name": "sap-dev-bastionsubnet-sg",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-websubnet-sg",
            "location": "eastus2",
            "name": "sap-dev-websubnet-sg",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_subnet_nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-bastionsubnet-sg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "sap-dev-bastionsubnet-sg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-bastionsubnet-sg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "sap-dev-bastionsubnet-sg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_subnet_nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-websubnet-sg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "sap-dev-websubnet-sg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-websubnet-sg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "sap-dev-websubnet-sg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-websubnet-sg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "sap-dev-websubnet-sg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lb_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/publicIPAddresses/sap-dev-lb-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.22.214.98",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "sap-dev-lb-publicip",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-bastionsubnet",
            "name": "sap-dev-bastionsubnet",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "virtual_network_name": "sap-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet",
            "name": "sap-dev-websubnet",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "virtual_network_name": "sap-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-bastionsubnet",
            "network_security_group_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-bastionsubnet-sg",
            "subnet_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_subnet_nsg_rule",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet",
            "network_security_group_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/networkSecurityGroups/sap-dev-websubnet-sg",
            "subnet_id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_subnet_nsg_rule",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e3651823-4397-4653-a6c1-0c7986d54a67",
            "id": "/subscriptions/96b933ba-3ac8-4a40-99cd-89bd68a4e6d6/resourceGroups/sap-dev-rg-default-knfsio/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default",
            "location": "eastus2",
            "name": "sap-dev-vnet-default",
            "resource_group_name": "sap-dev-rg-default-knfsio",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}